<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tDateRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerStudent">

    <TextView
        android:id="@+id/tRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/register"
        android:fontFamily="@font/advent_pro"
        android:textAlignment="center"
        android:textColor="#5E35B1"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tCollegeRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="110dp"
        android:ems="10"
        android:hint="@string/college_register"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tNameRegister" />

    <EditText
        android:id="@+id/tMobileRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="110dp"
        android:ems="10"
        android:hint="@string/mobile_register"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tCollegeRegister" />

    <EditText
        android:id="@+id/tEmailRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="110dp"
        android:ems="10"
        android:hint="@string/email_register"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tMobileRegister" />

    <EditText
        android:id="@+id/tNameRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="110dp"
        android:ems="10"
        android:hint="@string/name_register"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tRegister" />

    <EditText
        android:id="@+id/tDate"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/date_register"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tTimeRegister"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tYearRegister" />

    <EditText
        android:id="@+id/tTimeRegister"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="110dp"
        android:ems="10"
        android:hint="@string/time_register"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tDate"
        app:layout_constraintTop_toBottomOf="@+id/tYearRegister" />

    <EditText
        android:id="@+id/tYearRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="110dp"
        android:ems="10"
        android:hint="@string/year_register"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tEmailRegister" />

    <Button
        android:id="@+id/bRegisterLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register_student"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tTimeRegister" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="291dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/edit2" />


</androidx.constraintlayout.widget.ConstraintLayout>