<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".resultView">

    <TextView
        android:id="@+id/tEnterResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/enter_result"
        android:textAlignment="center"
        android:fontFamily="@font/advent_pro"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="291dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/edit2" />

    <EditText
        android:id="@+id/tEnterWinner"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_first"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tEnterResult" />

    <EditText
        android:id="@+id/tEnterFirstRunnerUp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_first_runner_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tEnterWinner" />

    <EditText
        android:id="@+id/tEnterSecondRunnerUp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"

        android:hint="@string/enter_second_runner_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tEnterFirstRunnerUp" />

    <Button
        android:id="@+id/bDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tEnterSecondRunnerUp" />


</androidx.constraintlayout.widget.ConstraintLayout>